--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   text-decoration: none;
 }
 .App .info-section {
-  margin-left: 150px;
+  text-align: center;
   margin-top: 30px;
   line-height: 2;
 }
