--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
   font-size: 15px;
 }
 .App a {
-  color: #6a7f3f;
+  color: #708b3d;
   text-decoration: none;
 }
 .App .info-section {
@@ -55,7 +55,7 @@
 .App .unit {
   font-size: 18px;
   position: relative;
-  bottom: 30px;
+  bottom: 45px;
 }
 .App canvas {
   display: inline-block;
@@ -67,4 +67,7 @@
 .App .date {
   font-size: 18px;
   font-weight: 400;
+}
+.App .temp {
+  display: inline-block;
 }
