--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   background-color: #c3d0a8;
-  margin: 200px auto;
+  margin: 80px auto;
   padding: 30px;
   border-radius: 10px;
   max-width: 800px;
@@ -18,7 +18,7 @@
   border: none;
   padding: 10px;
   border-radius: 10px;
-  margin: 10px;
+  margin: 10px 10px 10px 5px;
 }
 ::placeholder {
   color: #6a7f3f;
@@ -33,7 +33,7 @@
   font-size: 15px;
 }
 .App a {
-  color: #708b3d;
+  color: #5e7830;
   text-decoration: none;
 }
 .App .info-section {
@@ -45,7 +45,7 @@
   list-style: none;
 }
 .App h1 {
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 .App .current-temp {
   font-size: 60px;
@@ -57,9 +57,11 @@
   position: relative;
   bottom: 45px;
 }
-.App canvas {
-  display: inline-block;
-  margin-right: 15px;
+.App img {
+  position: relative;
+  bottom: 30px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 .App ul {
   padding-left: 0;
@@ -70,4 +72,24 @@
 }
 .App .temp {
   display: inline-block;
+}
+.App .forecast-icon {
+  width: 70px;
+}
+.App .icon-and-temp {
+  margin-top: 25px;
+}
+.App .right-side {
+  font-size: 20px;
+  margin-top: 15px;
+}
+.App .today-info {
+  border: dotted 2px #6a7f3f;
+  border-radius: 20px;
+  padding-top: 50px;
+  margin: 0px 30px 40px 30px;
+  background-color: #5e783072;
+}
+.App .date {
+  margin-bottom: 15px;
 }
