changed state management to handle unit changes

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,71 @@ body {
   max-width: 800px;
   color: #202e07;
 }
+.App .toggle {
+  text-align: end;
+  margin-right: 30px;
+}
+.App .unit-label {
+  font-size: 24px;
+  font-weight: 300;
+  position: relative;
+  top: 6px;
+  color: #394e17;
+  margin: 5px 10px 0px 5px;
+}
+.App .switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+.App .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.App .slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: #f0eee2;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.App .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #6a7f3f;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.App input:checked + .slider {
+  background-color: #6a7f3f;
+}
+
+.App input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+.App input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+.App .slider.round {
+  border-radius: 34px;
+}
+
+.App .slider.round:before {
+  border-radius: 50%;
+}
 .App .submit-input {
   background-color: #f0eee2;
   border: none;
